--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <h1>Hello, World!</h1>
     <p>My name is Stacy, and I'm the Program Manager for AlbanyCanCode. 
       I work with students who are learning to code their very first web pages!</p>
-    <p>Here is a picture of my pet snake, Noodle. <img src="stacyacc.github.io/IMG_7281.jpg"></p>
+    <p>Here is a picture of my pet snake, Noodle.</p>
+    <p><img src="stacyacc.github.io/IMG_7281.jpg"></p>
   </body>
 <html>
   
