--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,10 @@
           display: none;
           font-size: 12px;
         }
+
+        #main-doc{
+          float: right;
+        }
       }
 
       body {
