--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,7 @@
         border-radius: 5px;
         color: #4a1d0b;
         padding: 10px;
-
+        margin: 2%;
       }
 
       #main-section {
