--- a/watermelonstroller.html
+++ b/watermelonstroller.html
@@ -96,7 +96,7 @@
       </nav>
     </header>
     <main>
-      <div id="item-title"><h2>The Watermelon Stroller</h2></div>
+      <h2 id="item-title">The Watermelon Stroller</h2>
       <div id="photo">
         <a name="#photo"><img src="watermelonstroller.jpg" alt="The Watermelon Stroller is pictured in three states: closed dome with handle stowed, open dome with handle stowed, and closed dome with handle extended. The watermelon passenger appears unbothered." /></a>
       </div>
