--- a/watermelonstroller.html
+++ b/watermelonstroller.html
@@ -56,7 +56,7 @@
         padding: 25px;
         font-size: 36px;
         font-weight: bold;
-        padding-top: 200px;
+        padding-top: 180px;
       }
 
       main {
@@ -97,7 +97,7 @@
       </nav>
     </header>
     <main>
-      <h2 id="item-title">The Watermelon Stroller</h2>
+      <div id="item-title">The Watermelon Stroller</div>
       <div id="photo">
         <a name="#photo"><img src="watermelonstroller.jpg" alt="The Watermelon Stroller is pictured in three states: closed dome with handle stowed, open dome with handle stowed, and closed dome with handle extended. The watermelon passenger appears unbothered." /></a>
       </div>
