--- a/surveyform.html
+++ b/surveyform.html
@@ -13,7 +13,7 @@
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
         margin: auto;
-        width: 80%;
+        width: 90%;
         border-top-style: solid;
         border-left-style: solid;
         border-right-style: solid;
@@ -28,7 +28,7 @@
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
         margin: auto;
-        width: 80%;
+        width: 90%;
         border-style: solid;
         border-color: black;
         border-width: 1px;
@@ -42,13 +42,13 @@
       form {
         padding-left: 10px;
         padding-right: 10px;
-        width: 70%;
+        width: 85%;
         margin: auto;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
-
+        align-content: center;
       }
 
       #submit {
