--- a/surveyform.html
+++ b/surveyform.html
@@ -98,6 +98,12 @@
         align-self: flex-end;
       }
 
+      @media screen and (max-width: 600px) {
+        main{
+          font-size: 24px;
+        }
+  }
+
 
     </style>
     <title>
