--- a/portfolio.html
+++ b/portfolio.html
@@ -186,7 +186,7 @@
         <h3 class="project-title">Product Page</h3></a>
       </div>
       <div class="project-div">
-        <a href="https://staccacc.github.io/resume.html" target="_blank"><img src="resume.png" class="project-image" />
+        <a href="https://stacyacc.github.io/resume.html" target="_blank"><img src="resume.png" class="project-image" />
           <h3 class="project-title">Resume</h3></a>
         </div>
       </section>
