--- a/surveyform.html
+++ b/surveyform.html
@@ -29,6 +29,7 @@
         border-bottom-right-radius: 5px;
         margin: auto;
         width: 90%;
+        height: 90%;
         border-style: solid;
         border-color: black;
         border-width: 1px;
